# core-Wakanda

./: .gitmodules  Beta Compiler Settings.vsprops  Curl_Settings.props  Curl_Settings.vsprops  Default Compiler Settings x64.props  Default Compiler Settings x64.vsprops  Default Compiler Settings.props  Default Compiler Settings.vsprops  ICU_Settings.props  ICU_Settings.vsprops  Mecab_Settings.props  Mecab_Settings.vsprops  OpenLDAP_Settings.props  OpenSSL_Settings.props  OpenSSL_Settings.vsprops  Pthreads_Settings.vsprops  QTime_Settings.vsprops  README.md  V8_Settings.props  Wakanda Main 2013.sln  Wakanda Main.sln  Wakanda Server.sln  Wakanda Server.sln.git  Wakanda WAK2.sln  Wakanda WAK3.sln  Wakanda WAK4.sln  Wakanda WAK5.sln  Wakanda WAK6.sln  Wakanda WAK7 2012.sln  Wakanda WAK7.sln  Wakanda WAK8 2013.sln  Wakanda WAK9 2013.sln  WebKit_Settings.props  WebKit_Settings.vsprops  Xalan_Settings.props  Xalan_Settings.vsprops  Xerces_Settings.props  Xerces_Settings.vsprops  ZLib_Settings.props  ZLib_Settings.vsprops  (+1 more)
Common/CMake/: CF_Linux.txt  CF_Linux_Entreprise.txt  CMakeLinks.sh  CMakeLists.txt  CopyFiles_Linux.txt  FindLibBSD.cmake  FindLibUUID.cmake  FindLibZip.cmake  FindLinuxPlatform.cmake  FindTermcap.cmake  FixEclipse.sh  ResetBuild.sh  WakandaLinuxFilter.txt  compilatux.project  completion.cmake  components-enterprise.cmake  components.cmake  core-libraries.cmake  cpack.cmake  ext-bsd.cmake  ext-cap-ng.cmake  ext-curl.cmake  ext-icu.cmake  ext-ldap.cmake  ext-odbc.cmake  ext-openssl.cmake  ext-termcap.cmake  ext-uuid.cmake  ext-v8.cmake  ext-webkit.cmake  ext-xerces.cmake  ext-zip.cmake  ext-zlib.cmake  options.cmake  platform.h.cmake  reset-build.sh  tests.cmake  utils.cmake
Common/Licenses/: licenseEnterprise_Production.txt  licenseEnterprise_Stabilisation.txt  license_Production.txt  license_Stabilisation.txt
Common/NetBeans/: NetBeans.html
Common/Resources/: Wakanda Generic.MAC.icns  fileSystems.json  importUAG.js  systemWorkers.json  uag.waModel
Common/Resources/en.lproj/: SolutionManagerEN.xlf
Common/Sources/: BreakPointsManager.h  VProject.cpp  VProject.h  VProjectItem.cpp  VProjectItem.h  VProjectItemBehaviour.cpp  VProjectItemBehaviour.h  VProjectSettings.cpp  VProjectSettings.h  VRIAPermissions.cpp  VRIAPermissions.h  VRIAServerComponentBridgeAbstract.h  VRIAServerComponentBridgeTypes.h  VRIAServerConstants.cpp  VRIAServerConstants.h  VRIASettingsFile.cpp  VRIASettingsFile.h  VRIASettingsKeys.cpp  VRIASettingsKeys.h  VRIAUTIs.cpp  VRIAUTIs.h  VRPCCatalog.cpp  VRPCCatalog.h  VSolution.cpp  VSolution.h  VSolutionManagerConstants.h  VSolutionManagerInterface.h  VSolutionSettings.cpp  VSolutionSettings.h  VSolutionStartupParameters.cpp  VSolutionStartupParameters.h  VSourceControl.h  commonJSAPI.cpp  commonJSAPI.h
Common/Tests-v2/defaultsolution/: BasicTestProject.waSettings  BasicTestProject.waSolution
Common/Visual/: CF_Win.txt  CF_Win_Entreprise.txt  CopyFilesVS9.txt
Common/XCode/: CF_Mac.txt  CF_Mac_Entreprise.txt  CopyFiles_Mac.txt  Wakanda Enterprise Generic.icns  Wakanda Generic.icns
Common/tests/: readme.txt
Common/tests/installer/: pom.json  test.js  uuid
Server/Projet/CMake/: CMakeLists.txt
Server/Projet/Visual/: RIA Server-VS9.vcproj  RIA Server-VS9.vcxproj  RIA Server-VS9.vcxproj.filters  RIA Server.vcxproj  RIA Server.vcxproj.filters  RIA Server.vcxproj.vspscc  Wakanda.rc  WakandaVersNum.h  manifest x64.props  manifest x64.vsprops  manifest.props  manifest.vsprops
Server/Projet/XCode/: %Wakanda Server.icns  RIAServerDebugMacho.pch  RIAServerFinalMacho.pch  Wakanda Enterprise Server.icns  Wakanda Server.icns  base.xcconfig  beta.xcconfig  coverage.xcconfig  debug.xcconfig  performance.xcconfig  release.xcconfig
Server/Resources/: %Wakanda Server.MAC.icns  Info.plist  Wakanda Server.MAC.icns  credits.txt  remote_traces.skeleton  supportedCSSProperties.txt
Server/Resources/Default Solution/: DefaultSolution.waSettings  DefaultSolution.waSolution
Server/Resources/Templates/: templates.breakpoints  templates.waDirectory  templates.waSettings  templates.waSolution
Server/Resources/en.lproj/: InfoPlist.strings  waServerEN.xlf
Server/Sources/: VDataService.cpp  VDataService.h  VJSApplication.cpp  VJSApplication.h  VJSConsole.cpp  VJSConsole.h  VJSDataServiceCore.cpp  VJSDataServiceCore.h  VJSPermissions.cpp  VJSPermissions.h  VJSRPCCatalog.cpp  VJSRPCCatalog.h  VJSRPCServiceCore.cpp  VJSRPCServiceCore.h  VJSSolution.cpp  VJSSolution.h  VJSWebAppServiceCore.cpp  VJSWebAppServiceCore.h  VRIAJSDebuggerSettings.cpp  VRIAJSDebuggerSettings.h  VRIAServer.cpp  VRIAServerApplication.cpp  VRIAServerApplication.h  VRIAServerComponentBridge.cpp  VRIAServerComponentBridge.h  VRIAServerHTTPRequestHandler.cpp  VRIAServerHTTPRequestHandler.h  VRIAServerHTTPSession.cpp  VRIAServerHTTPSession.h  VRIAServerJSAPI.cpp  VRIAServerJSAPI.h  VRIAServerJSContextMgr.cpp  VRIAServerJSContextMgr.h  VRIAServerJSCore.cpp  VRIAServerJSCore.h  VRIAServerJSDebugger.cpp  VRIAServerJSDebugger.h  VRIAServerLogger.cpp  VRIAServerLogger.h  VRIAServerProgressIndicator.cpp  (+31 more)
Server/Tests-v2/compatibility/: pom.json
Server/Tests-v2/core/: pom.json
Server/Tests/Backup/: testIsValid.js  testSetDestination.js
Server/Tests/Buffer/: test.js
Server/Tests/Compatibility/: test.waSolution
Server/Tests/DataStorePermissions/: pom.xml
Server/Tests/Datastore/: testDataClass.js  testDataClassPart2.js  testQuery.js
Server/Tests/File/: test.waSettings  testBinaryStream.js  testFile.js  testFolder.js  testTextStream.js
Server/Tests/HTTP-RFC/: settings.xml
Server/Tests/LanguageSyntax/: README.TXT  test.waSolution  testCompletionClasses.js  testCompletionEntityModels.js  testCompletionObjects.js  testDeclarationArrays.js  (+10 more)
Server/tests/: readme.txt
walib/WAF/: Loader.js
walib/admin/: Chart.js  admin.html  admin.js
walib/dataBrowser/: .project  index.html
walib/debugger/: remoteDebugger.appCache  remote_debugger.html
walib/minifiedCoresWAF/: desktop.core.min.css  desktop.core.min.js  mobile.core.min.css  mobile.core.min.js
walib/troubleshooting/: index.html
(+4768 files in other folders)
